src/test/deca/codegen/valid/declVarInt.ass
; Main Program
	TSTO #1
	BOV pile_pleine
	ADDSP #1
; start main program
; Main program
; Beginning of main instructions:
	LOAD #1, R3
	STORE R3, 1(GB)
	HALT
; Message d'erreurs
pile_pleine:
	WSTR "Erreur : debordement de pile"
	WNL
	ERROR
; end main program
